Added more functionality to the Provider app and it's templates, Fixing Profile templates

--- a/templates/base/nav_bar.html
+++ b/templates/base/nav_bar.html
@@ -52,7 +52,7 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="{% url 'logout' %}">Logout </a>
                             </li>
-                            {% if request.user.is_staff or request.user.is_superuser %}
+                            {% if request.user.is_staff %}
                                 <li class="nav-item active">
                                     <a class="nav-link btn btn-link" href="{% url 'admin:index' %}"  style="background-color: #417690">Administrator</a>
                                 </li>
