--- a/templates/providers/service_provider_profile.html
+++ b/templates/providers/service_provider_profile.html
@@ -20,25 +20,28 @@
                         <h3 style="margin-left: 20px"><strong>{{ company.name }}</strong></h3>
                         <div class="img_container">
                             <div class="img-box b2">
-                                <img src="{% static 'images/default_profile_picture.jpg' %}" alt="No Picture">
+                                <img src="
+                                        {% if company.company_logo %}
+                                            {{ company.company_logo }}
+                                        {% else %}
+                                            {% static 'images/default_profile_picture.jpg' %}
+                                        {% endif %}"
+                                     alt="Company Logo">
                             </div>
                         </div>
                         <div class="profile-info">
                             <h4 style="margin-left: 20px"><strong>{{ full_name }}</strong></h4>
                             <p><strong>Company e-mail:</strong> {{ company.email }}</p>
                             <p><strong>Company phone:</strong> {{ company.phone }}</p>
-                            <p><strong>Company address:</strong> {{ company.address }}</p>
+                            <p><strong>Company address:</strong>
+                                {{ company.address }},
+                                {{ company.city }},
+                                {{ company.country }}
+                            </p>
                         </div>
                     </div>
                     <div class="button-container" style="margin-top: 100px;">
-                        {% if is_owner %}
-                            {#                        <a href="{% url 'edit_profile' request.user.slug %}" class="btn custom-button"#}
-                            <a href="{% url 'edit_profile' %}" class="btn custom-button"
-                               style="font-size: 1.2em; padding: 5px 20px; min-width: 120px; background-color: #4b208c; border-radius: 0; color: white; margin-right: 90px;">
-                                Edit Profile
-                            </a>
-                        {% endif %}
-                        <a href="{% url 'provider_services' slug=object.slug %}" class="btn custom-button"
+                        <a href="{% url 'provider_services' slug=object.slug %}?all_categories=True" class="btn custom-button"
                            style="font-size: 1.2em; padding: 5px 20px; min-width: 120px; background-color: #4b208c; border-radius: 0; color: white;">
                             View Services
                         </a>
